# e-lang

./: .gitattributes  .gitignore  BENCHMARK.md  E vs Go.md  E vs Python.md  GRAMMAR.md  GRAMMATICA.md  LICENSE  README.md  Regole_001.md  Rules.md  SPEC.md  TODOs.md  backup.sql  index.html  install.sh  pyproject.toml
e/: Cargo.toml  e_data.json
e/examples/: browser_demo.e  core.eee  demo_live.e  g.e  login.eee  plugins.eee  wait_demo.e  when_demo.eee
e/src/: ast.rs  browser.rs  drivers.rs  email.rs  lexer.rs  main.rs  parser.rs  runtime.rs  sys.rs  ui.rs
e/tests/: integration.rs
e_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: backup.e  backup.eee  bash_demo.eee  browser.eee  browser_demo.eee  connect.eee  core.eee  dashboard.e  demo_live.eee  download.e  download.eee  g.e  g.eee  garmin.e  healthcheck.eee  hello.e  hello.eee  lib.eee  lib_mod.eee  login.e  login.eee  plugins.eee  wait_demo.eee  when_demo.eee
parser/: main.py  parser_e.py
runtime/: cli.py  context.py  executor.py  run_e.py
runtime/drivers/: base.py  browser.py  mail.py  real.py
