[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "e-lang"
version = "0.7.0"
description = "E — a general-purpose language. Describe actions in time."
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.10"

[project.scripts]
e = "runtime.cli:main"

[tool.setuptools.packages.find]
include = ["runtime*", "parser*"]
