[package]
name = "e"
version = "2.1.0"
edition = "2021"
description = "E — general-purpose language"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
regex = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.11", features = ["builder", "smtp-transport"] }
notify = "6"
tokio-cron-scheduler = "0.9"
libloading = "0.8"
once_cell = "1.19"
